GNOME Bugzilla – Bug 671376
[info] "Other Media" type's combo list has broken icons
Last modified: 2012-03-05 18:29:41 UTC
Using GNOME 3.3.90: * gnome-control-center info * selected removable media on the left bar * click on "other medias..." on the right The "type" combo has broken icons, the combo icon column is populated with " icon = g_content_type_get_icon (content_type);" call, which gives "x-content-..." icons but no icon theme seems to ship those which results in incorrect icons for every entry, wouldn't it be better to have no icon in that case until the themes are updated?
commit bdb09755c8de06ed98050d57ee3ffc0aeca04d98 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Mar 5 18:27:18 2012 +0000 info: Remove unused icons In GNOME 3.2, the icons were hidden. Some changes in GTK+ mean that the icons are now visible. As we don't use them, remove them altogether. https://bugzilla.gnome.org/show_bug.cgi?id=671376