info: Remove unused icons

In GNOME 3.2, the icons were hidden. Some changes in GTK+ mean
that the icons are now visible. As we don't use them, remove them
altogether.

https://bugzilla.gnome.org/show_bug.cgi?id=671376